syntax="proto3";
option go_package = "user/";

message UserRequest{
  // @inject_tag: json:"nick_name" form:"nick_name" uri:"nick_name"
  string NickName=1;
  // @inject_tag: json:"user_name" form:"user_name" uri:"user_name"
  string UserName=2;
  // @inject_tag: json:"password" form:"password" uri:"password"
  string Password=3;
  // @inject_tag: json:"password_confirm" form:"password_confirm" uri:"password_confirm"
  string PasswordConfirm=4;
}

message UserResponse{
  // @inject_tag: json:"user_id" form:"user_id" uri:"user_id"
  int64 UserId=1;
  // @inject_tag: json:"nick_name" form:"nick_name" uri:"nick_name"
  string NickName=2;
  // @inject_tag: json:"user_name" form:"user_name" uri:"user_name"
  string UserName=3;
}

message UserDetailResponse{
  // @inject_tag: json:"user_response" form:"user_response" uri:"user_response"
  UserResponse UserDetail=1;
  // @inject_tag: json:"code" form:"code"" uri:"code""
  int64 Code=2;
}

message UserCommonResponse{
  // @inject_tag: json:"code" form:"code"" uri:"code""
  int64 Code=1;
  // @inject_tag: json:"msg" form:"msg"" uri:"msg""
  string Msg=2;
  // @inject_tag: json:"data" form:"data"" uri:"data""
  string Data=3;
}

service UserService{
  rpc UserLogin(UserRequest) returns(UserDetailResponse);
  rpc UserRegister(UserRequest) returns(UserCommonResponse);
  rpc UserLogout(UserRequest) returns(UserCommonResponse);
}
